# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = h_assets
version = 1.0
description = Pyramid views for serving compiled static assets
long_description = file: README.md
long_description_content_type = text/markdown

author = Hypothesis Engineering Team
author_email = eng@list.hypothes.is
maintainer = Hypothesis Engineering Team
maintainer_email = eng@list.hypothes.is
url = https://web.hypothes.is/

# From: https://pypi.org/pypi?:action=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

project_urls=
    Source=https://github.com/hypothesis/h-assets
license=License :: OSI Approved :: BSD License
platforms=Operating System :: OS Independent

[options]
install_requires =
    pyramid
tests_require=
    pytest
    coverage

[pydocstyle]
ignore =
    # Missing docstrings.
    D100,D101,D102,D103,D104,D105,D106,D107,

    # "No blank lines allowed after function docstring" conflicts with
    # the Black code formatter, which insists on inserting blank lines after
    # function docstrings.
    D202,

    # "1 blank line required before class docstring" conflicts with another
    # pydocstyle rule D211 "No blank lines allowed before class docstring".
    D203,

    # Multi-line docstring summary should start at the first line, this
    # conflicts with another pycodestyle rule "Multi-line docstring summary
    # should start at the second line".
    D212,
